--- a/refs_photon_stats.bib
+++ b/refs_photon_stats.bib
@@ -1,6 +1,6 @@
 @article{Teich:89,
 author = {Malvin C. Teich and Paul Diament},
-journal = {J. Opt. Soc. Am. A},
+journal = {Journal of the Optical Society of America A},
 keywords = {Irradiance; Laser light; Light propagation; Light sources; Statistics; Transforms},
 number = {1},
 pages = {80--91},
