--- a/refs_photon_stats.bib
+++ b/refs_photon_stats.bib
@@ -1,6 +1,6 @@
 @article{Teich:89,
 author = {Malvin C. Teich and Paul Diament},
-journal = {Journal of the Optical Society of America A},
+journal = {J. Opt. Soc. Am. A},
 keywords = {Irradiance; Laser light; Light propagation; Light sources; Statistics; Transforms},
 number = {1},
 pages = {80--91},
@@ -24,10 +24,101 @@ doi = {10.1364/JOSAA.6.000080},
   publisher={Roberts \& Company}
 }
 
-@BOOK{Kendall63_2a,
+@book{Kendall63_2a,
   AUTHOR =       {Kendall, M. G. and Stuart, A.},
   TITLE =        {The advanced theory of statistics},
   PUBLISHER =    {Griffin},
   volume =       {2a},
   YEAR =         {1963}
+}
+
+@article{cao_effect_2020,
+	title = {The {Effect} of {Intensity} {Fluctuations} on {Sequential} {X}-ray {Photon} {Correlation} {Spectroscopy} at the {X}-ray {Free} {Electron} {Laser} {Facilities}},
+	volume = {10},
+	issn = {2073-4352},
+	url = {https://www.mdpi.com/2073-4352/10/12/1109},
+	doi = {10.3390/cryst10121109},
+	abstract = {How materials evolve at thermal equilibrium and under external excitations at small length and time scales is crucial to the understanding and control of material properties. X-ray photon correlation spectroscopy (XPCS) at X-ray free electron laser (XFEL) facilities can in principle capture dynamics of materials that are substantially faster than a millisecond. However, the analysis and interpretation of XPCS data is hindered by the strongly ﬂuctuating X-ray intensity from XFELs. Here we examine the impact of pulse-to-pulse intensity ﬂuctuations on sequential XPCS analysis. We show that the conventional XPCS analysis can still faithfully capture the characteristic time scales, but with substantial decrease in the signal-to-noise ratio of the g2 function and increase in the uncertainties of the extracted time constants. We also demonstrate protocols for improving the signal-to-noise ratio and reducing the uncertainties.},
+	language = {en},
+	number = {12},
+	urldate = {2023-08-11},
+	journal = {Crystals},
+	author = {Cao, Yue and Sheyfer, Dina and Jiang, Zhang and Maddali, Siddharth and You, Hoydoo and Wang, Bi-Xia and Ye, Zuo-Guang and Dufresne, Eric M. and Zhou, Hua and Stephenson, G. Brian and Hruszkewycz, Stephan O.},
+	month = dec,
+	year = {2020},
+	pages = {1109},
+	file = {Cao et al. - 2020 - The Effect of Intensity Fluctuations on Sequential.pdf:/Users/shtun/Zotero/storage/8LDJE6F9/Cao et al. - 2020 - The Effect of Intensity Fluctuations on Sequential.pdf:application/pdf}
+}
+
+@article{jo_single_2023,
+	title = {Single and multi-pulse based {X}-ray photon correlation spectroscopy},
+	volume = {31},
+	issn = {1094-4087},
+	url = {https://opg.optica.org/abstract.cfm?URI=oe-31-2-3315},
+	doi = {10.1364/OE.477774},
+	abstract = {The ability of pulsed nature of synchrotron radiation opens up the possibility of studying microsecond dynamics in complex materials via speckle-based techniques. Here, we present the study of measuring the dynamics of a colloidal system by combining single and multiple X-ray pulses of a storage ring. In addition, we apply speckle correlation techniques at various pulse patterns to collect correlation functions from nanoseconds to milliseconds. The obtained sample dynamics from all correlation techniques at different pulse patterns are in very good agreement with the expected dynamics of Brownian motions of silica nanoparticles in water. Our study will pave the way for future pulsed X-ray investigations at various synchrotron X-ray sources using individual X-ray pulse patterns.},
+	language = {en},
+	number = {2},
+	urldate = {2023-08-11},
+	journal = {Optics Express},
+	author = {Jo, Wonhyuk and Stern, Stephan and Westermeier, Fabian and Rysov, Rustam and Riepp, Matthias and Schmehr, Julian and Lange, Jörn and Becker, Julian and Sprung, Michael and Laurus, Torsten and Graafsma, Heinz and Lokteva, Irina and Grübel, Gerhard and Roseker, Wojciech},
+	month = jan,
+	year = {2023},
+	pages = {3315},
+	file = {Jo et al. - 2023 - Single and multi-pulse based X-ray photon correlat.pdf:/Users/shtun/Zotero/storage/4RN4EYBT/Jo et al. - 2023 - Single and multi-pulse based X-ray photon correlat.pdf:application/pdf},
+}
+
+
+@article{hruszkewycz_high_2012,
+	title = {High {Contrast} {X}-ray {Speckle} from {Atomic}-{Scale} {Order} in {Liquids} and {Glasses}},
+	volume = {109},
+	issn = {0031-9007, 1079-7114},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.109.185502},
+	doi = {10.1103/PhysRevLett.109.185502},
+	language = {en},
+	number = {18},
+	urldate = {2023-08-11},
+	journal = {Physical Review Letters},
+	author = {Hruszkewycz, S. O. and Sutton, M. and Fuoss, P. H. and Adams, B. and Rosenkranz, S. and Ludwig, K. F. and Roseker, W. and Fritz, D. and Cammarata, M. and Zhu, D. and Lee, S. and Lemke, H. and Gutt, C. and Robert, A. and Grübel, G. and Stephenson, G. B.},
+	month = nov,
+	year = {2012},
+	pages = {185502},
+	file = {Hruszkewycz et al. - 2012 - High Contrast X-ray Speckle from Atomic-Scale Orde.pdf:/Users/shtun/Zotero/storage/X2F3SPEQ/Hruszkewycz et al. - 2012 - High Contrast X-ray Speckle from Atomic-Scale Orde.pdf:application/pdf},
+}
+
+@article{lehmkuhler_femtoseconds_2021,
+	title = {From {Femtoseconds} to {Hours}—{Measuring} {Dynamics} over 18 {Orders} of {Magnitude} with {Coherent} {X}-rays},
+	volume = {11},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {2076-3417},
+	url = {https://www.mdpi.com/2076-3417/11/13/6179},
+	doi = {10.3390/app11136179},
+	abstract = {X-ray photon correlation spectroscopy (XPCS) enables the study of sample dynamics between micrometer and atomic length scales. As a coherent scattering technique, it benefits from the increased brilliance of the next-generation synchrotron radiation and Free-Electron Laser (FEL) sources. In this article, we will introduce the XPCS concepts and review the latest developments of XPCS with special attention on the extension of accessible time scales to sub-μs and the application of XPCS at FELs. Furthermore, we will discuss future opportunities of XPCS and the related technique X-ray speckle visibility spectroscopy (XSVS) at new X-ray sources. Due to its particular signal-to-noise ratio, the time scales accessible by XPCS scale with the square of the coherent flux, allowing to dramatically extend its applications. This will soon enable studies over more than 18 orders of magnitude in time by XPCS and XSVS.},
+	language = {en},
+	number = {13},
+	urldate = {2024-05-20},
+	journal = {Applied Sciences},
+	author = {Lehmkühler, Felix and Roseker, Wojciech and Grübel, Gerhard},
+	month = jan,
+	year = {2021},
+	note = {Number: 13
+Publisher: Multidisciplinary Digital Publishing Institute},
+	keywords = {coherence, free electron laser, synchrotron radiation, X-ray intensity fluctuation spectroscopy, X-ray photon correlation spectroscopy, X-ray scattering, X-ray speckle visibility spectroscopy},
+	pages = {6179},
+	file = {Full Text PDF:/Users/shtun/Zotero/storage/IN6BYP6Y/Lehmkühler et al. - 2021 - From Femtoseconds to Hours—Measuring Dynamics over.pdf:application/pdf},
+}
+
+@book{goodman_speckle_2020,
+	address = {Bellingham},
+	edition = {Second edition},
+	title = {Speckle phenomena in optics: theory and applications},
+	isbn = {978-1-5106-3149-6},
+	shorttitle = {Speckle phenomena in optics},
+	abstract = {"Speckle, a granular structure appearing in images and diffraction patterns produced by objects that are rough on the scale of an optical wavelength, is a ubiquitous phenomenon, appearing in optics, acoustics, microwaves, and other fields. This book provides comprehensive coverage of this subject, both the underlying statistical theory and the applications of this phenomenon. This is a second edition, containing improvements of several sections and addition of significant amounts of new material. New material includes new sections on generalized random walks, a rewritten section on speckle in the eye, new sections on polarization speckle, including discussion of the statistics of the Stokes parameters in a speckle pattern, new discussions of the effects of angle and wavelength changes on speckle, new sections on the statistics of speckle from "smooth" surfaces, and a new section on a spectrometer based on speckle. Many new references are included. As with the first edition, a multitude of areas of application are covered"--},
+	language = {en},
+	publisher = {The International Society for Optical Engineering},
+	author = {Goodman, Joseph W.},
+	year = {2020},
+	keywords = {Light, Optics, Reflection (Optics), Scattering, Speckle},
+	file = {Goodman - 2020 - Speckle phenomena in optics theory and applicatio.pdf:/Users/shtun/Zotero/storage/CGXIXDLB/Goodman - 2020 - Speckle phenomena in optics theory and applicatio.pdf:application/pdf},
 }
