--- a/main.tex
+++ b/main.tex
@@ -72,11 +72,12 @@
 \section{X-rays Speckle Visibility Spectroscopy (XSVS)}
 \subsection{What is speckle contrast/ visibility}
 \label{subsec:speckle}
-Speckle contrast, denoted as $\beta$, is a measure of the intensity variations in a speckle pattern, where bright spots result from constructive interference and dark spots from destructive interference of scattered X-rays. It depends on the coherence properties of the X-ray beam and the experimental configurations \cite{hruszkewycz_high_2012}. Speckle contrast is typically computed as the normalized variance of the intensity signal distribution at the detector given by $\beta = \sigma_I/\langle I \rangle$ \cite{hruszkewycz_high_2012}. Since speckle contrast reflects the extent to which the scattered waves interfere, it can also be expressed as the ratio of the difference between the maximum and minimum intensities to their sum, i.e., \(\beta = (I_{\text{max}} - I_{\text{min}})/( I_{\text{max}} + I_{\text{min}})\). Thus, the maximum achievable contrast is 1, occurring when the waves interfere perfectly constructively and destructively, creating sharp intensity variations. On the other hand, a contrast of 0 would imply no interference patterns, with uniformly distributed intensities. 
+A speckle pattern arises in the far-field from the interference between the wavefronts scattered from heterogeneities in the materials due to varying phase shifts being introduced into the scattering of coherent incident light. Speckle size \(s\) is dictated by the X-ray wavelength \(\lambda\), sample-to-detector distance \(D\) and illuminated area size \(d\) via the relationship \(s = \lambda D/d \).  
+
+Speckle contrast, denoted as $\beta$, is a measure of the intensity variations in a speckle pattern, where bright spots result from constructive interference and dark spots from destructive interference of scattered X-rays. It depends on the coherence properties of the X-ray beam and the experimental configurations \cite{hruszkewycz_high_2012}. 
+Speckle contrast is typically computed as the normalized variance of the intensity signal distribution at the detector given by $\beta = \sigma_I/\langle I \rangle$ \cite{hruszkewycz_high_2012}. Since speckle contrast reflects the extent to which the scattered waves interfere, it can also be expressed as the ratio of the difference between the maximum and minimum intensities to their sum, i.e., \(\beta = (I_{\text{max}} - I_{\text{min}})/( I_{\text{max}} + I_{\text{min}})\). Thus, the maximum achievable contrast is 1, occurring when the waves interfere both perfectly constructively and destructively, creating sharp intensity variations. On the other hand, a contrast of 0 would imply that the interference is not coherent enough to form visible speckles, resulting in uniformly distributed intensities.
 
 Several factors can reduce speckle contrast: if the coherence length of the incident beam is less than the illuminated volume of the sample, if the detector pixels are too large to resolve the speckle, or if the sample rearranges over the timescale during which the pattern is recorded \cite{hruszkewycz_high_2012}. 
-
-A speckle pattern arises in the far-field from the interference between the wavefronts scattered from heterogeneities in the materials due to varying phase shifts being introduced into the scattering of coherent incident light. Speckle size \(s\) is dictated by the X-ray wavelength \(\lambda\), sample-to-detector distance \(D\) and illuminated area size \(d\) via the relationship \(s = \lambda D/d \). 
 
 The evolution of the system can be captured by taking a time series of speckle patterns and quantifying the changes in speckles from frame to frame to study dynamics of materials from the rearrangements of speckle patterns. Speckle contrast captures the changes in the system that occurs within the data collection period of a single frame by utilizing the photon statistical properties of the detected photons in a X-ray scattering experiment. 
 
